--- a/board/static/css/metrics-graphics/metricsgraphics.css
+++ b/board/static/css/metrics-graphics/metricsgraphics.css
@@ -59,12 +59,6 @@ a:hover {
     stroke: none;
 }
 
-body {
-    background-color: #fff;
-    color: #000;
-    font-family: 'Open Sans', sans-serif, Arial;
-}
-
 .btn-group {
     display: inline-block;
     margin-left: 3px;
@@ -81,6 +75,12 @@ body {
     margin-right: 8px;
 }
 
+.chart_title {
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+
 .chart_title .popover {
     font-size: 12px;
 }
@@ -92,13 +92,6 @@ body {
 
 .chart_title .popover.top {
     margin-top: 0;
-}
-
-.chart_title {
-    cursor: default;
-    font-size: 22px;
-    padding-top: 8px;
-    text-align: center;
 }
 
 .chart_title .fa {
@@ -236,12 +229,6 @@ circle {
 
 .missing-pane {
     fill: none;
-}
-
-p {
-    font-family: 'PT Serif', serif;
-    font-size: 16px;
-    line-height: 24px;
 }
 
 path.main-area {
