--- a/application_styles/main.less
+++ b/application_styles/main.less
@@ -107,11 +107,14 @@ h6 {
   h3,p {
     margin: 5px 0;
   }
-  &.null {
+  &.up {
     background: @brand-success;
   }
   &.down {
     background: @brand-danger;
+  }
+  &.warning {
+    background: @brand-warning;
   }
 }
 
