--- a/board/templates/board/incident_detail.html
+++ b/board/templates/board/incident_detail.html
@@ -14,7 +14,7 @@
         {% for item_event in incident.events.all %}
         <div class="updates-container">
             <div class="update">
-                <strong><font color="{{ item_event.status.color }}">{{ item_event.status.name }}</font></strong> -  {{ item_event.message|safe }}
+                <strong>{{ item_event.status.name }}</strong> -  {{ item_event.message|safe }}
                 <br>
                 <small>
                     {{ item_event.start|date:"M j, H:i T" }}
