--- a/application_styles/main.less
+++ b/application_styles/main.less
@@ -5,10 +5,10 @@ html, body {
   font-family: 'Fira Sans', sans-serif;
 }
 
-body {
+.flex-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .site-content {
@@ -33,8 +33,11 @@ h6 {
 }
 
 #services-table {
-  background: white;
-  border: 1px solid @gray;
+    background: white;
+    border-bottom: 1px solid @gray;
+    border-radius: @border-radius-base;
+    margin: 10px 0;
+    padding: 10px;
   td,
   th {
     border-bottom: 1px dotted @gray;
@@ -134,9 +137,12 @@ h6 {
 }
 
 #bug-submission {
-  background: white;
-  border: 1px solid @gray;
-  padding: 20px;
+    background: white;
+    border-bottom: 1px solid @gray;
+    border-radius: @border-radius-base;
+    margin: 10px 0;
+    padding: 10px;
+    font-size: 16px;
   label {
     display: block;
   }
