--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -26,7 +26,7 @@
 
         {% block extrahead %}{% endblock %}
     </head>
-    <body>
+    <body class="flex-container">
     <div class="site-content">
 
         <nav class="navbar navbar-default dark" role="navigation">
