Redirect users to SUMO instead.

--- a/board/templates/board/index.html
+++ b/board/templates/board/index.html
@@ -39,8 +39,8 @@
 
 {% block bugzilla %}
 <div id="contact-block">
-    <a href="/contact" target="_blank">
-        <button class="btn btn-primary btn-lg">Have a problem? Report it</button>
+    <a href="https://support.mozilla.org" target="_blank">
+        <button class="btn btn-primary btn-lg">Have a problem?</button>
     </a>
 </div>
 {% endblock %}
