--- a/application_styles/main.less
+++ b/application_styles/main.less
@@ -41,7 +41,6 @@ h6 {
   td,
   th {
     border-bottom: 1px dotted @gray;
-    border: none;
     font-size: 18px;
     padding: 10px;
     vertical-align: middle;
@@ -53,7 +52,10 @@ h6 {
   }
   td {
     border-radius: 10px;
-    padding: 15px;
+    padding: 3px;
+  }
+  .status {
+    text-align: center;
   }
 }
 
