--- a/board/templates/board/index.html
+++ b/board/templates/board/index.html
@@ -4,21 +4,24 @@
 {% regroup services|dictsort:"category.name" by category as category_list %}
 <div id="webservices" class="">
     {% for category in category_list %}
-    <h2 class="category"><!-- {{ category.grouper.name }}--></h2>
+    <h2 class="category">{{ category.grouper.name }}</h2>
     <div class="category-desc">
-        <!--{{ category.grouper.description|safe }} -->
+        {{ category.grouper.description|safe }}
     </div>
     <table id="services-table" class="table">
         <thead>
             <tr>
                 <th>Service</th>
-                <th><span>State</span></th>
+                <th class="today">Current</th>
+                {% for day in past %}
+                    <th class="date">{{ day|date:"N d" }}</th>
+                {% endfor %}
             </tr>
         </thead>
         <tbody id="services-body">
         {% for service in category.list %}
         <tr>
-            <td>{{ service.name }}</td>
+            <td><a href="{{ service.get_absolute_url }}">{{ service.name }}</a></td>
             {% with service.events.latest.status as latest_status %}
             {% if latest_status %}
             <td class="status">
@@ -30,13 +33,25 @@
             </td>
             {% endif %}
             {% endwith %}
+
+            {% for status in service.last_five_days %}
+                <td class="status">
+                    <a href="{{ service.get_absolute_url }}/{{ status.day|date:"Y/m/d" }}">
+                        <img src="{{ STATIC_URL }}images/status/{{ status.image }}.png" alt="{{ status.image }}">
+                    </a>
+                </td>
+            {% endfor %}
+
         </tr>
+
         {% endfor %}
         </tbody>
     </table>
     {% endfor %}
+    {% include "board/_legend.html" %}
 </div>
 
+<!--
 {% block bugzilla %}
 <div id="contact-block">
     <a href="https://support.mozilla.org" target="_blank">
@@ -44,6 +59,7 @@
     </a>
 </div>
 {% endblock %}
+-->
 
 <div id='event-log'>
     <h2>Recent Events</h2>
