--- a/application_styles/main.css
+++ b/application_styles/main.css
@@ -35,7 +35,6 @@ h6 {
 #services-table td,
 #services-table th {
   border-bottom: 1px dotted #c1c1c1;
-  border: none;
   font-size: 18px;
   padding: 10px;
   vertical-align: middle;
@@ -48,7 +47,10 @@ h6 {
 }
 #services-table td {
   border-radius: 10px;
-  padding: 15px;
+  padding: 3px;
+}
+#services-table .status {
+  text-align: center;
 }
 #contact-block {
   margin: 50px 0;
